--- a/css/style.css
+++ b/css/style.css
@@ -1,44 +1,56 @@
-html {
-    height: 100%;
-}
 body {
-    background: linear-gradient(45deg, black,black, rgb(132, 11, 11));
+    font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    height: 100%;
-    font-family: Arial, sans-serif;
-    margin-top: 60px;
+    background-color: #000;
+    color: white;
 }
 header {
-    background-color: black;
+    background-color: #8B0000; /* 짙은 빨간색 */
     color: white;
-    padding: 10px;
-    position: fixed;
+    padding: 10px 0;
+    text-align: center;
+    position: fixed; /* 고정 위치 */
     top: 0;
     width: 100%;
-    font-size: 18px;
+    z-index: 1000; /* 다른 요소들 위에 표시 */
 }
-header:hover {
-    background-color: #222222;
-    transition: 0.5s ease;
-}
-header .header-main {
-    font-size: 1.3em;
-    margin-left: 20px;
-    margin-right: 20px;
-}
-header a {
-    color: white;
-    text-decoration: none;
-    margin-left: 10px;
-    margin-right: 10px;
-}
-header a:hover {
-    color: #888888;
-    transition: 0.5s ease;
+.navbar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center; /* 수직 중앙 정렬 */
+    padding: 0 10%;
+    height: 30px; /* 상단바의 높이 설정 */
 }
 
+.navbar a {
+    color: white;
+    text-decoration: none;
+    padding: 8px 15px;
+    transition: background-color 0.5s ease;
+}
+
+.navbar a:hover {
+    background-color: #700000; /* 어두운 빨간색 */
+}
+.navbar a:active {
+    background-color: #300000;
+    color: #ccc;
+}
 footer {
     color: white;
     text-align: center;
+    padding: 10px 0;
+    bottom: 0;
+    width: 100%;
+}
+main {
+    max-width: 80%; /* 최대 너비 설정 */
+    margin: auto; /* 자동 마진으로 중앙 정렬 */
+    padding-top: 60px; /* 상단바 아래에 콘텐츠가 시작되도록 여백 추가 */
+    min-height: 80vh; /* 푸터를 하단에 유지하기 위해 */
+}
+a{
+    text-decoration: none;
+    color: white;
 }
