--- a/css/style.css
+++ b/css/style.css
@@ -54,3 +54,16 @@ a{
     text-decoration: none;
     color: white;
 }
+.back-button {
+    background-color: black;
+    color: white;
+    border: 1px solid white;
+    border-radius: 10px;
+    padding: 10px 20px;
+    cursor: pointer;
+}
+
+.back-button:hover {
+    background-color: #333;
+    transition: all 0.3s ease; /* 모든 변화에 대한 부드러운 전환 */
+}
